[package]
name = "paperscript"
version = "0.1.0"
description = "PaperScript compiler"
edition = "2018"

[features]
default = ["clap", "termcolor", "toml"]

[dependencies]
logos = "0.12"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
termcolor = { version = "1.1", optional = true }
clap = { version = "3.0.0-beta.2", features = ["wrap_help"], optional = true }
toml = { version ="0.5", optional = true }

[dev-dependencies]
indoc = "1.0"
pretty_assertions = "0.6"
